--- a/Drone_Problem.ipynb
+++ b/Drone_Problem.ipynb
@@ -16,13 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import Glop linear solver package\n",
     "from ortools.linear_solver import pywraplp as glp\n",
     "import csv\n",
+    "import numpy as np\n",
+    "\n",
     "# initialize model object\n",
     "mymodel = glp.Solver('Drone Routing Problem', glp.Solver.CBC_MIXED_INTEGER_PROGRAMMING)"
    ]
@@ -43,31 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['0', '100', '81', '99', '61', '111', '16', '76', '67', '84', '102', '0'],\n",
-       " ['100', '0', '97', '98', '41', '93', '97', '92', '48', '51', '9', '100'],\n",
-       " ['81', '97', '0', '19', '66', '36', '66', '6', '51', '47', '92', '81'],\n",
-       " ['99', '98', '19', '0', '74', '18', '84', '23', '58', '47', '92', '99'],\n",
-       " ['61', '41', '66', '74', '0', '77', '56', '61', '17', '34', '42', '61'],\n",
-       " ['111', '93', '36', '18', '77', '0', '97', '38', '60', '45', '86', '111'],\n",
-       " ['16', '97', '66', '84', '56', '97', '0', '60', '59', '73', '98', '16'],\n",
-       " ['76', '92', '6', '23', '61', '38', '60', '0', '46', '43', '88', '76'],\n",
-       " ['67', '48', '51', '58', '17', '60', '59', '46', '0', '18', '45', '67'],\n",
-       " ['84', '51', '47', '47', '34', '45', '73', '43', '18', '0', '45', '84'],\n",
-       " ['102', '9', '92', '92', '42', '86', '98', '88', '45', '45', '0', '102'],\n",
-       " ['0', '100', '81', '99', '61', '111', '16', '76', '67', '84', '102', '0']]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import csv distance matrix as list\n",
     "with open('Orders_Data.csv', newline='') as f:\n",
@@ -78,14 +58,22 @@
     "for i in range(len(distance)):\n",
     "    distance[i] = [item for item in distance[i] if item]\n",
     "distance = [item for item in distance if item]\n",
-    "distance"
+    "distance = np.array(distance, dtype = 'float')\n",
+    "\n",
+    "# Cost per unit of distance\n",
+    "truck_cost_per_dist = 10.0\n",
+    "drone_cost_per_dist = 3.0\n",
+    "\n",
+    "# Create cost matrices for truck & drone\n",
+    "truck_cost = distance * truck_cost_per_dist\n",
+    "drone_cost = distance * drone_cost_per_dist"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize Data Object"
+    "### Initialize Model Parameters"
    ]
   },
   {
@@ -97,15 +85,9 @@
     "# model parameters\n",
     "R = list(range(1, len(distance)-1)) # Nodes excluding origin & final 'dummy' node\n",
     "N = list(range(len(distance))) # All nodes\n",
-    "M = len(distance) + 100 # Large number\n"
+    "M = len(distance) + 100 # Large number\n",
+    "D = list(range(3)) # Drones onboard the truck"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -116,28 +98,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 1.10, 1.11, 1.12],\n",
+       " [2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 2.10, 2.11, 2.12],\n",
+       " [3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 3.10, 3.11, 3.12],\n",
+       " [4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 4.10, 4.11, 4.12],\n",
+       " [5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 5.10, 5.11, 5.12],\n",
+       " [6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 6.10, 6.11, 6.12],\n",
+       " [7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 7.10, 7.11, 7.12],\n",
+       " [8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 8.10, 8.11, 8.12],\n",
+       " [9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 9.10, 9.11, 9.12],\n",
+       " [10.1, 10.2, 10.3, 10.4, 10.5, 10.6, 10.7, 10.8, 10.9, 10.10, 10.11, 10.12],\n",
+       " [11.1, 11.2, 11.3, 11.4, 11.5, 11.6, 11.7, 11.8, 11.9, 11.10, 11.11, 11.12],\n",
+       " [12.1, 12.2, 12.3, 12.4, 12.5, 12.6, 12.7, 12.8, 12.9, 12.10, 12.11, 12.12]]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "use_arc = [list(range(1 + N * i, 1 + N * (i+1))) for i in range(N)] \n",
-    "for i in range(N):\n",
-    "    for j in range(N):\n",
-    "        use_arc[i][j] = mymodel.IntVar(0, 1, str(i+1) + \".\" + str(j+1))\n",
-    "use_arc"
+    "# Truck path from node i to j\n",
+    "truck_arc = [list(range(1 + len(N) * i, 1 + len(N) * (i+1))) for i in N] \n",
+    "for i in N:\n",
+    "    for j in N:\n",
+    "        truck_arc[i][j] = mymodel.IntVar(0, 1, str(i+1) + \".\" + str(j+1))\n",
+    "truck_arc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "float() argument must be a string or a number, not 'Variable'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-607c4ca63b0f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mR\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mD\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m             \u001b[0mdrone_arc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmymodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mIntVar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\".\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\".\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mdrone_arc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a number, not 'Variable'"
+     ]
+    }
+   ],
+   "source": [
+    "# Drone path from node i to j\n",
+    "drone_arc = np.empty((len(N),len(N), len(D)))\n",
+    "drone_arc[:] = np.NaN\n",
+    "drone_arc.tolist()\n",
+    "\n",
+    "for i in R:\n",
+    "    for j in R:\n",
+    "        for k in D:\n",
+    "            drone_arc[i][j][k] = mymodel.IntVar(0, 1, str(i+1) + \".\" + str(j+1) + \".\" + str(k+1))\n",
+    "drone_arc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[p.1, p.2, p.3, p.4, p.5, p.6, p.7, p.8, p.9, p.10, p.11, p.12]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create position variable (lambda / u)\n",
-    "pos = list(range(N))\n",
-    "for i in range(N):\n",
-    "    pos[i] = mymodel.IntVar(0, N, \"p_\" + str(i+1))\n",
+    "pos = list(N)\n",
+    "for i in N:\n",
+    "    pos[i] = mymodel.IntVar(0, len(N), \"p.\" + str(i+1))\n",
     "pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, w.2, w.3, w.4, w.5, w.6, w.7, w.8, w.9, w.10, w.11, 11]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Not sure what this is for?\n",
+    "w = list(N)\n",
+    "for i in R:\n",
+    "    w[i] = mymodel.IntVar(0, len(N), \"w.\" + str(i+1))\n",
+    "w"
    ]
   },
   {
@@ -149,16 +219,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "in method 'Objective_SetCoefficient', argument 2 of type 'operations_research::MPVariable const *const'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-c4691805c172>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0moptimal_route\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSetCoefficient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtruck_arc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtruck_cost\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mD\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m             \u001b[0moptimal_route\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSetCoefficient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdrone_arc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdrone_cost\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\ortools\\linear_solver\\pywraplp.py\u001b[0m in \u001b[0;36mSetCoefficient\u001b[1;34m(self, var, coeff)\u001b[0m\n\u001b[0;32m    378\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    379\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mSetCoefficient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'Variable'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoeff\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'double'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;34m\"void\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 380\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_pywraplp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mObjective_SetCoefficient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoeff\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    381\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    382\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mGetCoefficient\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;34m'Variable'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;34m\"double\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: in method 'Objective_SetCoefficient', argument 2 of type 'operations_research::MPVariable const *const'"
+     ]
+    }
+   ],
    "source": [
     "# create objective function\n",
-    "shortest_route = mymodel.Objective()\n",
-    "shortest_route.SetMinimization()\n",
-    "for i in range(N):\n",
-    "    for j in range(N):\n",
-    "        shortest_route.SetCoefficient(use_arc[i][j], cost[i][j])"
+    "optimal_route = mymodel.Objective()\n",
+    "optimal_route.SetMinimization()\n",
+    "for i in N:\n",
+    "    for j in N:\n",
+    "        optimal_route.SetCoefficient(truck_arc[i][j], truck_cost[i][j])\n",
+    "        for k in D:\n",
+    "            optimal_route.SetCoefficient(drone_arc[i][j][k], drone_cost[i][j])"
    ]
   },
   {
