--- a/Drone_Final.ipynb
+++ b/Drone_Final.ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set filepath for CSV with cost / distance data\n",
+    "cost_filepath = 'Orders_Data_20.csv' # file with distances between each node\n",
+    "coord_filepath = 'XYcoord_20.csv' # file with x, y coordinates of each node (including the origin)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Glop linear solver package\n",
+    "# import packages\n",
     "from ortools.linear_solver import pywraplp as glp\n",
     "import csv\n",
     "import numpy as np\n",
@@ -30,17 +41,6 @@
     "\n",
     "# initialize model object\n",
     "mymodel = glp.Solver('Drone Routing Problem', glp.Solver.CBC_MIXED_INTEGER_PROGRAMMING)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set filepath for CSV with cost / distance data\n",
-    "cost_filepath = 'Orders_Data_15.csv' # file with distances between each node\n",
-    "coord_filepath = 'XYcoord_15.csv' # file with x, y coordinates of each node (including the origin)"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +94,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# model parameters\n",
     "N = len(distance)\n",
     "M = N + 100 # Large number\n",
-    "D = 2 # Drones onboard the truck (0 to 2 index)"
+    "D = 2 # Drones onboard the truck (0 to 2 index)\n",
+    "N # Number of nodes (including origin)"
    ]
   },
   {
@@ -113,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,11 +138,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The kth drone path from node i to j\n",
+    "# The drone path from node i to j\n",
     "\n",
     "drone_arc = np.zeros((N,N)).tolist() # create nested list\n",
     "\n",
@@ -141,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +161,8 @@
     "pos = list(range(N))\n",
     "for i in range(N):\n",
     "    pos[i] = mymodel.IntVar(1, N-1, \"p.\" + str(i))\n",
+    "\n",
+    "# Set position 0 = 0    \n",
     "pos[0].SetLb(0)\n",
     "pos[0].SetUb(0)"
    ]
@@ -162,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +190,7 @@
     "        \n",
     "for i in range(N):\n",
     "    for j in range(N):\n",
-    "        if i != j: optimal_route.SetCoefficient(drone_arc[i][j], drone_cost[i][j]) # Drone cost per arc\n"
+    "        if i != j: optimal_route.SetCoefficient(drone_arc[i][j], drone_cost[i][j]) # Drone cost per arc"
    ]
   },
   {
@@ -188,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,42 +284,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "903"
+       "1762"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mymodel.NumVariables()"
+    "mymodel.NumVariables() # Number of Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "483"
+       "962"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mymodel.NumConstraints()"
+    "mymodel.NumConstraints() # Number of Variables"
    ]
   },
   {
@@ -370,8 +384,8 @@
    ],
    "source": [
     "# Solve the model and print optimal solution\n",
-    "start_time = time.time()\n",
-    "status = mymodel.Solve()                 # solve mymodel and display the solution\n",
+    "start_time = time.time() # Set start time for model\n",
+    "status = mymodel.Solve() # solve mymodel and display the solution\n",
     "\n",
     "print('Solution Status =', status)\n",
     "print('Number of variables =', mymodel.NumVariables())\n",
@@ -570,6 +584,7 @@
     }
    ],
    "source": [
+    "# Save solution as dataframe\n",
     "Position = []\n",
     "From = []\n",
     "To = []\n",
@@ -638,43 +653,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: [0, 0],\n",
-       " 1: [76, 98],\n",
-       " 2: [85, 6],\n",
-       " 3: [24, 10],\n",
-       " 4: [100, 47],\n",
-       " 5: [81, 77],\n",
-       " 6: [64, 7],\n",
-       " 7: [1, 61],\n",
-       " 8: [61, 24],\n",
-       " 9: [64, 5],\n",
-       " 10: [31, 23],\n",
-       " 11: [45, 70],\n",
-       " 12: [77, 11],\n",
-       " 13: [2, 90],\n",
-       " 14: [99, 61],\n",
-       " 15: [47, 91],\n",
-       " 16: [37, 74],\n",
-       " 17: [62, 78],\n",
-       " 18: [96, 50],\n",
-       " 19: [74, 65],\n",
-       " 20: [50, 56]}"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "coord = to_dict(coord)\n",
-    "coord"
+    "coord = to_dict(coord) # Convert to dictionary"
    ]
   },
   {
@@ -757,13 +740,6 @@
     "saveas_csv = 'Drone_output_' + str(N-1) +'n_' + str(D) + 'd_'+ today +'.csv'\n",
     "solution.to_csv(saveas_csv, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
